hphp/test/slow/enum_class/enum_class_diamond2.php.expectf
Fatal error: H cannot inherit the constant B from G, because it was previously inherited from F in %s/enum_class_diamond2.php on line 17
